@@ -32,28 +32,43 @@
     <dependencies>
         <dependency>
             <groupId>io.thorntail</groupId>
-            <artifactId>jaxrs</artifactId>
+            <artifactId>jsonp</artifactId>
         </dependency>
         <dependency>
             <groupId>io.thorntail</groupId>
-            <artifactId>jsonp</artifactId>
+            <artifactId>cdi</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.thorntail</groupId>
+            <artifactId>microprofile-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.thorntail</groupId>
+            <artifactId>microprofile-health</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.thorntail</groupId>
+            <artifactId>microprofile-openapi</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>io.thorntail</groupId>
             <artifactId>jaeger</artifactId>
         </dependency>
         <dependency>
             <groupId>io.thorntail</groupId>
-            <artifactId>zipkin-jaxrs</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.thorntail</groupId>
             <artifactId>microprofile-opentracing</artifactId>
         </dependency>
+<!--        <dependency>
+            <groupId>io.thorntail</groupId>
+            <artifactId>zipkin-jaxrs</artifactId>
+        </dependency>-->
         <dependency>
             <groupId>io.thorntail</groupId>
-            <artifactId>opentracing</artifactId>
+            <artifactId>swagger</artifactId>
         </dependency>
+
+
         <!--REDIS Client -->
         <dependency>
             <groupId>redis.clients</groupId>
@@ -62,6 +77,8 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -93,6 +110,12 @@
             <version>${version.junit5}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${version.junit5}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -109,6 +132,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true --illegal-access=permit</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
